Added Favicon and button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="DL Favicon.png"/>
     <title>DOUBLE LIVES (1992)</title>
 </head>
 <body>
@@ -21,6 +22,7 @@
             <h2>1992</h2>
             <h3 id="countdown"></h3>
             <p>New episode coming soon.</p>
+            <a href="https://www.webtoons.com/en/challenge/double-lives-1992/list?title_no=561166">READ THE COMIC</a>
         </div>
 
         <script>
