--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <div class="toggle"></div>
         </header>
 
+        <div class="bg-image"></div>
+
         <div class="overlay"></div>
 
         <div class="text">
