--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
         <div class="text">
             <h1>404</h1>
             <h2>Hmm...</h2>
-            <p>Wrong place bud, there's nothing to discover here. Head back to the home page alright?</p>
+            <p>Nothing to find here...</p>
             <a href="https://thevoiddark.github.io/double-lives.github.io/">BACK TO HOME PAGE</a>
         </div>
     </section>
