--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/png" href="DL Favicon.png"/>
-    <title>DOUBLE LIVES (1992)</title>
+    <title>DOUBLE LIVES 1992</title>
 </head>
 <body>
     <section class="showcase">
@@ -22,14 +22,16 @@
         <div class="text">
             <h1>DOUBLE LIVES</h1>
             <h2>1992</h2>
-            <h3>NEW EPISODE OUT NOW</h3>
-            <a href="https://www.webtoons.com/en/challenge/double-lives-1992/man-to-the-slaughter/viewer?title_no=561166&episode_no=6">READ THE NEW EPISODE</a>
+            <h3>WILL RETURN SOON...</h3>
+            <a href="https://www.webtoons.com/en/challenge/double-lives-1992/gaia/viewer?title_no=561166&episode_no=7">READ EP. 6, GAIA.</a>
+            <br>
+            <a href="https://discord.com/invite/Ae5NrFZVRg">Join the official Discord Server</a>
         </div>
 
         <ul class="social">
-            <li><a href="https://www.instagram.com/soul_creatures/"><img src="instagram.png" alt=""></li>
+            <li><a href="https://www.instagram.com/doublelives1992/"><img src="instagram.png" alt=""></li>
             <li><a href="https://twitter.com/sleepy_bunnies"><img src="twitter.png" alt=""></li>
-            <li><a href="https://discord.com/invite/2hgVck9w"><img src="discord.png" alt=""></li>
+            <li><a href="https://discord.com/invite/Ae5NrFZVRg"><img src="discord.png" alt=""></li>
             <li><a href="https://www.webtoons.com/en/challenge/double-lives-1992/list?title_no=561166""><img src="webtoon.png" alt=""></li>
         </ul>
     </section>
