double-lives-to-lcpd

--- a/index.html
+++ b/index.html
@@ -20,20 +20,7 @@
         <div class="overlay"></div>
 
         <div class="text">
-            <h1>DOUBLE LIVES</h1>
-            <h2>1992</h2>
-            <h3>WILL RETURN SOON...</h3>
-            <a href="https://www.webtoons.com/en/challenge/double-lives-1992/gaia/viewer?title_no=561166&episode_no=7">READ EP. 6, GAIA.</a>
-            <br>
-            <a href="https://discord.com/invite/Ae5NrFZVRg">Join the official Discord Server</a>
-        </div>
-
-        <ul class="social">
-            <li><a href="https://www.instagram.com/doublelives1992/"><img src="instagram.png" alt=""></li>
-            <li><a href="https://twitter.com/sleepy_bunnies"><img src="twitter.png" alt=""></li>
-            <li><a href="https://discord.com/invite/Ae5NrFZVRg"><img src="discord.png" alt=""></li>
-            <li><a href="https://www.webtoons.com/en/challenge/double-lives-1992/list?title_no=561166""><img src="webtoon.png" alt=""></li>
-        </ul>
+            <h1>soon</h1>
     </section>
 </body>
 </html>
