--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="DL Favicon.png"/>
-    <title>DOUBLE LIVES (1992)</title>
+    <link rel="shortcut icon" type="image/png" href=""/>
+    <title>L.C.P.D.</title>
 </head>
 <body>
     <section class="showcase">
@@ -19,9 +19,8 @@
 
         <div class="text">
             <h1>404</h1>
-            <h2>Hmm...</h2>
-            <p>Nothing to find here...</p>
-            <a href="https://thevoiddark.github.io/double-lives.github.io/">BACK TO HOME PAGE</a>
+            <p>There's nothing to discover</p>
+            <a href="https://lcpd.ml/">BACK TO HOME PAGE</a>
         </div>
     </section>
 </body>
