--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="DL Favicon.png"/>
-    <title>DOUBLE LIVES 1992</title>
+    <link rel="shortcut icon" type="image/png" href=""/>
+    <title>L.C.P.D.</title>
 </head>
 <body>
     <section class="showcase">
@@ -20,7 +20,13 @@
         <div class="overlay"></div>
 
         <div class="text">
-            <h1>soon</h1>
+            <h1>L.C.P.D.</h1>
+            <h2>coming soon...</h2>
+        </div>
+
+        <ul class="social">
+            <li><a href="https://www.instagram.com/lcpdcomic/"><img src="instagram.png" alt=""></li>
+        </ul>
     </section>
 </body>
 </html>
